--- a/styles.css
+++ b/styles.css
@@ -127,11 +127,13 @@ ul.skills {
 .skills li:nth-child(odd) {
   background: #0399ff;
 }
-.expContainer{
+.expContainer,
+.currentContainer{
   text-align: center;
   float: left;
 }
-#ExperienceBox {
+#ExperienceBox,
+#currentBox  {
   margin: 5%;
   padding: 20px 40px 40px;
   max-width: 100%;
@@ -145,7 +147,8 @@ ul.skills {
 #ExperienceBox:hover{
   border-color: #0399ff;
 }
-.Experience{
+.Experience,
+.current{
   max-width: 340px;
   padding: 10px;
   margin: 10px;
