--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ a {
   color: #999;
 }
 a:hover {
-  color: #6633ff;
+  color: #0399ff;
 }
 
 /* Section Styles */
@@ -50,7 +50,9 @@ a:hover {
   font-weight:normal;
 
 }
-
+.subName{
+   display: inline-block;
+}
 .nav li {
   padding: 5px 10px 10px 10px;
 }
@@ -127,49 +129,33 @@ ul.skills {
 .skills li:nth-child(odd) {
   background: #0399ff;
 }
-.expContainer,
-.currentContainer{
-  text-align: center;
-  float: left;
+
+.expContainer:hover{
+  border-color: #0399ff;
+
 }
-#ExperienceBox,
-#currentBox  {
-  margin: 5%;
-  padding: 20px 40px 40px;
-  max-width: 100%;
-  text-align: center;
+.expContainer{
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  margin: 30px;
   background: #fff;
   border-bottom: 4px solid #ccc;
   border-radius: 6px;
   transition: all .5s;
 }
-
-#ExperienceBox:hover{
-  border-color: #0399ff;
+.Experience{
+  max-width: 100%;
+  padding: 5%;
+  padding-bottom: 0;
 }
-.Experience,
-.current{
-  max-width: 340px;
-  padding: 10px;
-  margin: 10px;
-  box-shadow: 1px 5px 5px lightgrey;
-  border-radius: 10px;
-}
-/* .Experience:hover{
-  transform: scale(1.3);
-  padding: 0;
-
-} */
 
 .ExperienceText{
-  max-width: 350px;
-  padding: 0px;
-  margin: 10px;
+  text-align: left;
+  padding:10px;
+  padding-top: 0;
 }
 
-.ExperienceLink:hover{
-  color:#0399ff;
-}
 
 footer {
   width: 100%;
@@ -222,6 +208,7 @@ a.social:hover {
 
 
 /* Styles for larger screens */
+
 @media screen and (min-width: 720px) {
 
   .flex {
@@ -249,6 +236,19 @@ a.social:hover {
 
   main p {
     line-height: 1.6em;
+  }
+
+  #ExperienceBox{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 50px;
+  }
+  #ExperienceBox h2{
+    width: 100%;
+  }
+  .expContainer{
+    flex: 1;
   }
 
   footer {
