--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,216 @@
-* {
-  box-sizing: border-box; }
+.about-conatiner {
+  padding: 50px; }
 
-body {
-  margin: 0 50px;
-  padding: 0;
+.about-goals-skills {
+  display: flex; }
+
+.whatIdo {
+  width: 100%;
+  display: flex; }
+
+.skills-development,
+.skills-design {
+  width: 50%;
+  text-align: center;
+  padding: 0 100px; }
+
+.about-info h4 {
+  border-left: 1px solid #242930;
+  padding: 5px; }
+  .about-info h4::first-letter {
+    color: #ff4162;
+    font-size: 1.5em; }
+
+.contact-container {
+  display: flex;
+  padding: 50px; }
+
+.contact-info {
+  width: 50%; }
+
+.contact-item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px;
+  margin-right: 30px;
+  border-right: 1px solid black; }
+  .contact-item p {
+    max-width: 50%; }
+
+.contact-form {
+  width: 50%;
+  display: flex;
+  flex-direction: column; }
+
+.form-input {
+  margin-right: 50px;
+  margin-bottom: 25px;
+  width: 100%; }
+  .form-input input {
+    width: 100%; }
+  .form-input textarea {
+    width: 100%;
+    height: 100px; }
+
+h6 {
+  font-size: 1em; }
+
+.mainFooter {
+  background-color: #242930;
   display: flex;
   flex-direction: column;
-  font-family: "poppins", sans-serif; }
+  justify-content: center; }
+  .mainFooter img {
+    max-width: 50px;
+    margin: auto;
+    padding-top: 10px; }
+  .mainFooter p {
+    margin: auto;
+    padding: 5px;
+    color: white; }
+
+.footer-nav {
+  list-style: none;
+  display: flex;
+  margin: auto;
+  padding: 10px; }
+  .footer-nav li {
+    margin: 15px; }
 
 .main-nav {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  background-color: transparent;
+  width: 100%;
+  position: absolute; }
+  .main-nav h2 {
+    margin-left: 50px;
+    color: whitesmoke; }
+
+.pinkText {
+  color: #ff4162; }
 
 .nav {
-  display: flex;
+  display: inline-flex;
   list-style: none;
   margin-right: 50px; }
   .nav li {
     margin: 5px; }
 
+.introPiece {
+  background-color: #242930;
+  background-image: url("https://loremflickr.com/1420/800");
+  text-align: center;
+  padding: 50px;
+  padding-top: 170px;
+  height: 700px;
+  color: whitesmoke; }
+  .introPiece img {
+    max-width: 100px; }
+
+.intro-title {
+  font-size: 2.2em; }
+
+.intro-span {
+  font-size: 4em; }
+
+.intro-p {
+  font-size: 1.2em; }
+
+.intro-button {
+  border: none;
+  padding: 10px 25px;
+  border-radius: 2px;
+  background-color: #ff4162;
+  color: white;
+  font-size: 16px;
+  margin: 25px; }
+
+.portfolio-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px; }
+  .portfolio-container h4 {
+    width: 100%;
+    border-left: 1px solid #242930;
+    padding: 5px; }
+    .portfolio-container h4::first-letter {
+      color: #ff4162;
+      font-size: 1.5em; }
+
+.project {
+  max-width: 33%;
+  margin: auto; }
+
+.pricing-container {
+  display: flex;
+  text-align: center;
+  padding: 50px; }
+
+.Pricing-box-container {
+  width: 31.5%;
+  margin: 10px;
+  padding: 35px;
+  border: 1px solid #242930; }
+  .Pricing-box-container ul {
+    list-style: none; }
+
+.pricing-button {
+  border: none;
+  padding: 10px 25px;
+  border-radius: 2px;
+  background-color: #ff4162;
+  color: white;
+  font-size: 16px; }
+
+.services-container {
+  padding: 50px; }
+  .services-container h4 {
+    border-left: 1px solid #242930;
+    padding: 5px; }
+    .services-container h4::first-letter {
+      color: #ff4162;
+      font-size: 1.5em; }
+
+.myServices {
+  max-width: 48%;
+  margin-bottom: 50px; }
+
+.services-flex {
+  width: 33%;
+  text-align: center; }
+
+.right {
+  margin-top: 45px;
+  margin-left: 25px; }
+
+* {
+  box-sizing: border-box; }
+
+body {
+  margin: 0 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  font-family: "poppins", sans-serif; }
+
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: whitesmoke; }
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  margin: auto; }
+
+.container {
+  max-width: 90%;
+  display: flex;
+  margin: auto;
+  flex-wrap: wrap; }
+
+.breakImage img {
+  width: 100%; }
 
 /*# sourceMappingURL=styles.css.map */
