--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,27 +1,32 @@
+@import "utilities/index";
+@import "base/index";
+
 *{
   box-sizing: border-box;
 }
 body{
-  margin:0 50px;
+  margin:0 0;
   padding:0;
   display: flex;
   flex-direction: column;
   font-family: "poppins", sans-serif;
 }
-
-.main-nav{
-  display:flex;
-  justify-content: space-between;
-}
-.nav{
-  display: flex;
-  list-style: none;
-  margin-right: 50px;
-  li{
-    margin: 5px;
-  }
-}
-
 a{
   text-decoration: none;
+  color: whitesmoke;
+}
+.main-container{
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+.container{
+  max-width: 90%;
+  display: flex;
+  margin: auto;
+  flex-wrap: wrap;
+}
+.breakImage{
+  img {width: 100%;
+  }
 }
