--- a/css/styles.css
+++ b/css/styles.css
@@ -31,30 +31,75 @@
 .contact-item {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   padding: 20px;
-  margin-right: 30px;
-  border-right: 1px solid black; }
+  margin-right: 30px; }
   .contact-item p {
-    max-width: 50%; }
+    max-width: 100%;
+    margin: 0 25px; }
 
 .contact-form {
-  width: 50%;
+  width: 40%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  border-left: 1px solid black;
+  padding-left: 50px; }
+  .contact-form h4 {
+    font-size: 2em; }
+    .contact-form h4::first-letter {
+      color: #ff4162;
+      border-left: 1px #242930 solid;
+      padding-left: 5px; }
 
 .form-input {
   margin-right: 50px;
   margin-bottom: 25px;
   width: 100%; }
-  .form-input input {
-    width: 100%; }
-  .form-input textarea {
-    width: 100%;
-    height: 100px; }
+
+input {
+  width: 100%; }
+
+textarea {
+  width: 100%;
+  height: 100px; }
 
 h6 {
-  font-size: 1em; }
+  font-size: 1em;
+  margin: 0; }
+
+.contact-phone-number,
+.contact-Address,
+.contact-email {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 5px; }
+
+.contact-icon {
+  transition: 0.5s cubic-bezier(0, 1.1, 0.99, 1.61); }
+
+.contact-phone:hover {
+  transform: rotate(50deg) scale(1.2); }
+
+.contact-house:hover {
+  transform: scale(1.5); }
+
+.contact-mail:hover {
+  transform: scale(1.3); }
+
+.contact-submit-button {
+  border: none;
+  padding: 10px 25px;
+  border-radius: 2px;
+  background-color: #ff4162;
+  color: white;
+  font-size: 16px;
+  margin: 25px;
+  transition: .5s; }
+
+.contact-submit-button:hover {
+  background-color: white;
+  color: #242930;
+  box-shadow: 0 0 0 1px black;
+  cursor: pointer; }
 
 .mainFooter {
   background-color: #242930;
@@ -78,6 +123,10 @@ h6 {
   .footer-nav li {
     margin: 15px; }
 
+.icon-madeby {
+  align-self: center;
+  font-size: .8em; }
+
 .main-nav {
   display: flex;
   justify-content: space-between;
@@ -100,10 +149,12 @@ h6 {
 
 .introPiece {
   background-color: #242930;
-  background-image: url("https://loremflickr.com/1420/800");
+  background-image: url("../images/abstract-blur.jpg");
+  background-position: center;
+  background-size: cover;
   text-align: center;
   padding: 50px;
-  padding-top: 170px;
+  padding-top: 175px;
   height: 700px;
   color: whitesmoke; }
   .introPiece img {
@@ -125,7 +176,12 @@ h6 {
   background-color: #ff4162;
   color: white;
   font-size: 16px;
-  margin: 25px; }
+  margin: 25px;
+  transition: background-color .5s, color .5s; }
+
+.intro-button:hover {
+  background-color: white;
+  color: #242930; }
 
 .portfolio-container {
   display: flex;
@@ -154,7 +210,8 @@ h6 {
   padding: 35px;
   border: 1px solid #242930; }
   .Pricing-box-container ul {
-    list-style: none; }
+    list-style: none;
+    margin-bottom: 50px; }
 
 .pricing-button {
   border: none;
@@ -162,7 +219,13 @@ h6 {
   border-radius: 2px;
   background-color: #ff4162;
   color: white;
-  font-size: 16px; }
+  font-size: 16px;
+  transition: .5s; }
+
+.pricing-button:hover {
+  background-color: white;
+  color: #242930;
+  border: 1px solid #242930; }
 
 .services-container {
   padding: 50px; }
@@ -178,8 +241,16 @@ h6 {
   margin-bottom: 50px; }
 
 .services-flex {
-  width: 33%;
-  text-align: center; }
+  width: 30%;
+  text-align: center;
+  background-color: whitesmoke;
+  margin: 15px;
+  padding: 15px;
+  transition: background-color .5s, color .5s; }
+
+.services-flex:hover {
+  background-color: #242930;
+  color: white; }
 
 .right {
   margin-top: 45px;
@@ -197,7 +268,11 @@ body {
 
 a {
   text-decoration: none;
-  color: whitesmoke; }
+  color: whitesmoke;
+  transition: color .3s, font-size .5s; }
+
+a:hover {
+  color: #ff4162; }
 
 .main-container {
   display: flex;
@@ -212,5 +287,8 @@ a {
 
 .breakImage img {
   width: 100%; }
+
+.indent {
+  text-indent: 2em; }
 
 /*# sourceMappingURL=styles.css.map */
