--- a/sass/base/_contact.scss
+++ b/sass/base/_contact.scss
@@ -8,35 +8,87 @@
 .contact-item{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  // justify-content: space-between;
   padding: 20px;
   margin-right: 30px;
-  border-right: 1px solid black;
 
   p{
-    max-width: 50%;
+    max-width: 100%;
+    margin: 0 25px;
   }
 }
 .contact-form{
-  width: 50%;
+  width: 40%;
   display: flex;
   flex-direction: column;
+  border-left: 1px solid black;
+  padding-left: 50px;
+
+  h4{
+    font-size: 2em;
+
+    &::first-letter{
+      color: $off-pink;
+      border-left: 1px $shark solid;
+      padding-left: 5px;
+    }
+  }
+
+
 
 }
+
 .form-input{
   margin-right: 50px;
   margin-bottom: 25px;
   width: 100%;
-
+}
   input{
     width: 100%;
   }
+
   textarea{
     width: 100%;
     height: 100px;
   }
-}
+
 
 h6{
   font-size: 1em;
+  margin: 0;
+}
+.contact-phone-number,
+.contact-Address,
+.contact-email{
+    display: flex;
+    justify-content: space-between;
+    margin-left:5px;
+}
+.contact-icon{
+  transition: .5s cubic-bezier(0,1.1,.99,1.61);
+}
+.contact-phone:hover{
+  transform: rotate(50deg) scale(1.2);
+}
+.contact-house:hover{
+  transform: scale(1.5);
+}
+.contact-mail:hover{
+  transform: scale(1.3);
+}
+.contact-submit-button{
+  border: none;
+  padding:10px 25px;
+  border-radius: 2px;
+  background-color: $off-pink;
+  color: white;
+  font-size: 16px;
+  margin: 25px;
+  transition: .5s;
+}
+.contact-submit-button:hover{
+  background-color: white;
+  color: $shark;
+  box-shadow: 0 0 0 1px black;
+  cursor: pointer;
 }
