--- a/sass/base/_nav.scss
+++ b/sass/base/_nav.scss
@@ -27,10 +27,13 @@
 
 .introPiece{
   background-color: $shark;
-  background-image: url("https://loremflickr.com/1420/800");
+  // background-image: url("https://loremflickr.com/1420/800");
+  background-image: url("../images/abstract-blur.jpg");
+  background-position:center;
+  background-size: cover;
   text-align: center;
   padding: 50px;
-  padding-top: 170px;
+  padding-top: 175px;
   height: 700px;
   color: whitesmoke;
 
@@ -59,4 +62,9 @@
   color: white;
   font-size: 16px;
   margin: 25px;
+  transition: background-color .5s, color .5s;
+}
+.intro-button:hover{
+  background-color: white;
+  color: $shark;
 }
