--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
 
 #myChart {
   position: absolute;
-  top: 815px;
+  top: 1065px;
   right: 100px;
   float: right;
   max-width: 30%; }
@@ -51,6 +51,9 @@
   .contact-item p {
     max-width: 100%;
     margin: 0 25px; }
+
+.contact-icon {
+  margin: 0 10px; }
 
 .contact-form {
   width: 40%;
@@ -122,7 +125,7 @@ h6 {
   flex-direction: column;
   justify-content: center; }
   .mainFooter img {
-    max-width: 50px;
+    max-width: 150px;
     margin: auto;
     padding-top: 10px; }
   .mainFooter p {
@@ -142,15 +145,28 @@ h6 {
   align-self: center;
   font-size: .8em; }
 
+.sticky-wrapper {
+  color: whitesmoke; }
+
+.is-sticky {
+  z-index: 1000000000;
+  color: #242930;
+  transition: 5s ease-out; }
+  .is-sticky a {
+    transition: 5s ease-out;
+    color: #242930; }
+  .is-sticky a:hover {
+    color: #ff4162;
+    transition: .5s ease-out; }
+
 .main-nav {
   display: flex;
   justify-content: space-between;
-  background-color: transparent;
   width: 100%;
-  position: absolute; }
+  position: absolute;
+  z-index: 1000; }
   .main-nav h2 {
-    margin-left: 50px;
-    color: whitesmoke; }
+    margin-left: 50px; }
 
 .pinkText {
   color: #ff4162; }
@@ -170,7 +186,7 @@ h6 {
   text-align: center;
   padding: 50px;
   padding-top: 175px;
-  height: 700px;
+  height: 1000px;
   color: whitesmoke; }
   .introPiece img {
     max-width: 100px; }
@@ -210,23 +226,40 @@ h6 {
       color: #ff4162;
       font-size: 1.5em; }
 
+img {
+  margin-top: 15px; }
+
 .project {
   max-width: 33%;
   margin: auto;
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
 
 .project-information {
   position: absolute;
-  top: 10px;
+  top: 15px;
   left: 0px;
+  height: 350px;
   background-color: rgba(36, 41, 48, 0.6);
   padding: 50px;
   color: whitesmoke;
   opacity: 0;
-  transition: 1s ease-out; }
+  transition: .7s ease-out; }
 
 .project-information:hover {
   opacity: 1; }
+
+.link {
+  display: flex;
+  justify-content: flex-end; }
+  .link p {
+    margin-left: 10px; }
+  .link img {
+    position: relative;
+    bottom: 15px; }
+
+.link:hover {
+  cursor: pointer; }
 
 .pricing-container {
   display: flex;
@@ -239,8 +272,12 @@ h6 {
   padding: 35px;
   border: 1px solid #242930; }
   .Pricing-box-container ul {
-    list-style: none;
+    text-align: left;
     margin-bottom: 50px; }
+  .Pricing-box-container h3 {
+    font-size: 2.5em;
+    margin: 0;
+    display: inline; }
 
 .pricing-button {
   border: none;
@@ -323,7 +360,7 @@ a:hover {
   position: absolute;
   z-index: 100;
   max-width: 75%;
-  top: 3000px;
+  top: 3300px;
   left: 220px;
   font-size: 2em;
   color: #242930; }
