--- a/sass/base/_portfolio.scss
+++ b/sass/base/_portfolio.scss
@@ -3,34 +3,52 @@
   display: flex;
   flex-wrap: wrap;
   padding: 50px;
-
   h4{
     width: 100%;
     border-left: 1px solid $shark;
     padding: 5px;
 
-    &::first-letter{
-      color: $off-pink;
-      font-size: 1.5em;
+      &::first-letter{
+        color: $off-pink;
+        font-size: 1.5em;
+        }
     }
   }
+  img{
+    margin-top: 15px;
   }
-
 .project{
   max-width: 33%;
   margin:auto;
   position: relative;
+  overflow: hidden;
 }
 .project-information{
   position: absolute;
-  top: 10px;
+  top: 15px;
   left: 0px;
+  height: 350px;
   background-color: rgba(36, 41, 48, .6);
   padding: 50px;
   color: whitesmoke;
   opacity: 0;
-  transition: 1s ease-out;
+  transition: .7s ease-out;
+
 }
 .project-information:hover{
   opacity: 1;
+}
+.link{
+  display: flex;
+  justify-content:flex-end;
+  p{
+    margin-left: 10px;
+  }
+  img{
+    position: relative;
+    bottom: 15px;
+  }
+}
+.link:hover{
+  cursor:pointer;
 }
