--- a/sass/base/_pricing.scss
+++ b/sass/base/_pricing.scss
@@ -10,8 +10,14 @@
   border: 1px solid $shark;
 
   ul{
-    list-style: none;
+    // list-style: none;
+    text-align: left;
     margin-bottom: 50px;
+  }
+  h3{
+    font-size: 2.5em;
+    margin:0;
+    display:inline;
   }
 }
 .pricing-button{
