--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,6 +4,8 @@
 *{
   box-sizing: border-box;
 }
+html{
+}
 body{
   margin:0 0;
   padding:0;
@@ -39,7 +41,7 @@ a:hover{
   position: absolute;
   z-index: 100;
   max-width: 75%;
-  top: 3000px;
+  top: 3300px;
   left: 220px;
   font-size: 2em;
   color: $shark;
