Added proper images for portfolio
Currently: Need to change the lorem ipsum on the page to real text

Notes: What are freelance prices?

--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,8 @@ h6 {
       font-size: 1.5em; }
 
 img {
-  margin-top: 15px; }
+  margin-top: 15px;
+  max-width: 100%; }
 
 .project {
   max-width: 33%;
@@ -239,7 +240,7 @@ img {
   position: absolute;
   top: 15px;
   left: 0px;
-  height: 350px;
+  height: 395px;
   background-color: rgba(36, 41, 48, 0.6);
   padding: 50px;
   color: whitesmoke;
