--- a/sass/base/_portfolio.scss
+++ b/sass/base/_portfolio.scss
@@ -16,6 +16,7 @@
   }
   img{
     margin-top: 15px;
+    max-width: 100%;
   }
 .project{
   max-width: 33%;
@@ -27,7 +28,7 @@
   position: absolute;
   top: 15px;
   left: 0px;
-  height: 350px;
+  height: 395px;
   background-color: rgba(36, 41, 48, .6);
   padding: 50px;
   color: whitesmoke;
