--- a/css/styles.css
+++ b/css/styles.css
@@ -8,17 +8,18 @@
 .whatIdo {
   padding-top: 50px;
   width: 100%;
-  display: flex; }
+  display: flex;
+  flex-direction: column; }
 
 .skills-development,
 .skills-design {
-  width: 50%;
+  width: 100%;
   text-align: center;
-  padding: 0 100px; }
+  padding: 10px; }
 
 .about-info {
   position: relative;
-  width: 70%; }
+  width: 100%; }
   .about-info h4 {
     border-left: 1px solid #242930;
     padding: 5px; }
@@ -27,7 +28,8 @@
       font-size: 1.5em; }
 
 .skills {
-  width: 100%; }
+  width: 100%;
+  display: none; }
 
 #myChart {
   position: absolute;
@@ -38,16 +40,18 @@
 
 .contact-container {
   display: flex;
-  padding: 50px; }
+  flex-direction: column;
+  padding: 50px;
+  max-width: 100%; }
 
 .contact-info {
-  width: 50%; }
+  margin-bottom: 75px; }
 
 .contact-item {
   display: flex;
+  width: 100%;
   flex-wrap: wrap;
-  padding: 20px;
-  margin-right: 30px; }
+  padding: 20px; }
   .contact-item p {
     max-width: 100%;
     margin: 0 25px; }
@@ -56,11 +60,9 @@
   margin: 0 10px; }
 
 .contact-form {
-  width: 40%;
+  width: 75%;
   display: flex;
-  flex-direction: column;
-  border-left: 1px solid black;
-  padding-left: 50px; }
+  flex-direction: column; }
   .contact-form h4 {
     font-size: 2em; }
     .contact-form h4::first-letter {
@@ -74,9 +76,13 @@
   width: 100%; }
 
 input {
+  border: 1px lightgrey solid;
+  background-color: whitesmoke;
   width: 100%; }
 
 textarea {
+  border: 1px lightgrey solid;
+  background-color: whitesmoke;
   width: 100%;
   height: 100px; }
 
@@ -111,13 +117,17 @@ h6 {
   color: white;
   font-size: 16px;
   margin: 25px;
-  transition: .5s; }
+  transition: .5s;
+  width: 75%; }
 
 .contact-submit-button:hover {
   background-color: white;
   color: #242930;
   box-shadow: 0 0 0 1px black;
   cursor: pointer; }
+
+.contact-phone-number {
+  margin-right: 50px; }
 
 .mainFooter {
   background-color: #242930;
@@ -166,30 +176,40 @@ h6 {
   position: absolute;
   z-index: 1000; }
   .main-nav h2 {
-    margin-left: 50px; }
+    margin-left: 10%;
+    font-size: 1em; }
+    @media (min-width: 720px) {
+      .main-nav h2 {
+        font-size: 25px; } }
 
 .pinkText {
   color: #ff4162; }
 
 .nav {
-  display: inline-flex;
+  display: none;
   list-style: none;
   margin-right: 50px; }
   .nav li {
     margin: 5px; }
+  @media (min-width: 720px) {
+    .nav {
+      display: flex; } }
 
 .introPiece {
+  max-width: 100%;
   background-color: #242930;
   background-image: url("../images/abstract-blur.jpg");
   background-position: center;
   background-size: cover;
   text-align: center;
-  padding: 50px;
-  padding-top: 175px;
+  padding: 10px;
   height: 1000px;
   color: whitesmoke; }
   .introPiece img {
     max-width: 100px; }
+  @media (min-width: 720px) {
+    .introPiece {
+      padding-top: 175px; } }
 
 .intro-title {
   font-size: 2.2em; }
@@ -198,9 +218,11 @@ h6 {
   font-size: 4em; }
 
 .intro-p {
-  font-size: 1.2em; }
+  font-size: 1.2em;
+  max-width: 100%; }
 
 .intro-button {
+  display: block;
   border: none;
   padding: 10px 25px;
   border-radius: 2px;
@@ -209,6 +231,10 @@ h6 {
   font-size: 16px;
   margin: 25px;
   transition: background-color .5s, color .5s; }
+  @media (min-width: 720px) {
+    .intro-button {
+      display: inline;
+      max-width: 34%; } }
 
 .intro-button:hover {
   background-color: white;
@@ -216,6 +242,7 @@ h6 {
 
 .portfolio-container {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   padding: 50px; }
   .portfolio-container h4 {
@@ -225,27 +252,34 @@ h6 {
     .portfolio-container h4::first-letter {
       color: #ff4162;
       font-size: 1.5em; }
-
-img {
-  margin-top: 15px;
-  max-width: 100%; }
+  .portfolio-container img {
+    margin-top: 15px;
+    max-width: 100%; }
 
 .project {
-  max-width: 33%;
+  max-width: 100%;
   margin: auto;
   position: relative;
   overflow: hidden; }
 
 .project-information {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: absolute;
-  top: 15px;
-  left: 0px;
-  height: 395px;
+  top: 30px;
+  left: 5px;
+  width: 325px;
+  height: 300px;
   background-color: rgba(36, 41, 48, 0.6);
-  padding: 50px;
+  padding: 15px;
   color: whitesmoke;
   opacity: 0;
-  transition: .7s ease-out; }
+  transition: .7s ease-out;
+  font-size: 2em; }
+
+.small-hidden {
+  display: none; }
 
 .project-information:hover {
   opacity: 1; }
@@ -254,21 +288,21 @@ img {
   display: flex;
   justify-content: flex-end; }
   .link p {
-    margin-left: 10px; }
+    font-size: .6em;
+    margin: auto; }
   .link img {
     position: relative;
-    bottom: 15px; }
+    bottom: 10px; }
 
 .link:hover {
   cursor: pointer; }
 
 .pricing-container {
   display: flex;
-  text-align: center;
-  padding: 50px; }
+  text-align: center; }
 
 .Pricing-box-container {
-  width: 31.5%;
+  width: 100%;
   margin: 10px;
   padding: 35px;
   border: 1px solid #242930; }
@@ -295,7 +329,7 @@ img {
   border: 1px solid #242930; }
 
 .services-container {
-  padding: 50px; }
+  padding: 10px; }
   .services-container h4 {
     border-left: 1px solid #242930;
     padding: 5px; }
@@ -304,11 +338,11 @@ img {
       font-size: 1.5em; }
 
 .myServices {
-  max-width: 48%;
+  max-width: 100%;
   margin-bottom: 50px; }
 
 .services-flex {
-  width: 30%;
+  width: 100%;
   text-align: center;
   background-color: whitesmoke;
   margin: 15px;
@@ -320,15 +354,11 @@ img {
   color: white;
   cursor: pointer; }
 
-.right {
-  margin-top: 45px;
-  margin-left: 25px; }
-
 * {
   box-sizing: border-box; }
 
 body {
-  margin: 0 0;
+  margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -337,7 +367,7 @@ body {
 a {
   text-decoration: none;
   color: whitesmoke;
-  transition: color .3s, font-size .5s; }
+  transition: color .3s; }
 
 a:hover {
   color: #ff4162; }
@@ -353,9 +383,11 @@ a:hover {
   margin: auto;
   flex-wrap: wrap; }
 
-.breakImage img {
-  width: 100%;
-  opacity: .5; }
+.breakImage {
+  display: none; }
+  .breakImage img {
+    width: 100%;
+    opacity: .5; }
 
 .break-quote {
   position: absolute;
