--- a/sass/base/_about.scss
+++ b/sass/base/_about.scss
@@ -9,18 +9,19 @@
   padding-top: 50px;
   width: 100%;
   display: flex;
+  flex-direction: column;
 }
 
 .skills-development,
 .skills-design{
-  width:50%;
+  width:100%;
   text-align: center;
-  padding: 0 100px;
+  padding:  10px;
 
 }
 .about-info{
   position: relative;
-  width:70%;
+  width:100%;
   h4{
     border-left: 1px solid $shark;
     padding: 5px;
@@ -34,6 +35,7 @@
 
 .skills{
   width: 100%;
+  display: none;
 }
 #myChart{
   position: absolute;
