--- a/sass/base/_contact.scss
+++ b/sass/base/_contact.scss
@@ -1,16 +1,20 @@
 .contact-container{
   display: flex;
+  flex-direction: column;
   padding: 50px;
+  max-width: 100%;
 }
 .contact-info{
-  width: 50%;
+  // width: 50%;
+  margin-bottom: 75px;
 }
 .contact-item{
   display: flex;
+  width: 100%;
   flex-wrap: wrap;
   // justify-content: space-between;
   padding: 20px;
-  margin-right: 30px;
+  // margin-right: 30px;
 
   p{
     max-width: 100%;
@@ -21,11 +25,11 @@
   margin:0 10px;
 }
 .contact-form{
-  width: 40%;
+  width: 75%;
   display: flex;
   flex-direction: column;
-  border-left: 1px solid black;
-  padding-left: 50px;
+  // border-left: 1px solid black;
+  // padding-left: 50px;
 
   h4{
     font-size: 2em;
@@ -38,7 +42,6 @@
   }
 
 
-
 }
 
 .form-input{
@@ -47,10 +50,14 @@
   width: 100%;
 }
   input{
+    border:1px lightgrey solid;
+    background-color: whitesmoke;
     width: 100%;
   }
 
   textarea{
+    border: 1px lightgrey solid;
+    background-color: whitesmoke;
     width: 100%;
     height: 100px;
   }
@@ -88,10 +95,14 @@ h6{
   font-size: 16px;
   margin: 25px;
   transition: .5s;
+  width: 75%;
 }
 .contact-submit-button:hover{
   background-color: white;
   color: $shark;
   box-shadow: 0 0 0 1px black;
   cursor: pointer;
+}
+.contact-phone-number{
+  margin-right: 50px;
 }
