--- a/sass/base/_pricing.scss
+++ b/sass/base/_pricing.scss
@@ -1,10 +1,10 @@
 .pricing-container{
   display: flex;
   text-align: center;
-  padding: 50px;
+  // padding: 50px;
 }
 .Pricing-box-container{
-  width: 31.5%;
+  width: 100%;//31.5
   margin: 10px;
   padding: 35px;
   border: 1px solid $shark;
