--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 body{
-  margin:0 0;
+  margin:0;
   padding:0;
   display: flex;
   flex-direction: column;
@@ -14,7 +14,7 @@ body{
 a{
   text-decoration: none;
   color: whitesmoke;
-  transition: color .3s, font-size .5s;
+  transition: color .3s;
 }
 a:hover{
   color: $off-pink;
@@ -31,6 +31,7 @@ a:hover{
   flex-wrap: wrap;
 }
 .breakImage{
+  display: none;
   img {
     width: 100%;
     opacity: .5;
