--- a/sass/base/_about.scss
+++ b/sass/base/_about.scss
@@ -9,7 +9,6 @@
   padding-top: 50px;
   width: 100%;
   display: flex;
-  flex-direction: column;
 }
 
 .skills-development,
@@ -18,6 +17,10 @@
   text-align: center;
   padding:  10px;
 
+  @media(min-width: 720px){
+    width: 50%;
+    padding: 0 75px;
+  }
 }
 .about-info{
   position: relative;
@@ -31,11 +34,18 @@
       font-size: 1.5em;
     }
   }
+  @media(min-width: 720px){
+    width: 75%;
+  }
 }
+
 
 .skills{
   width: 100%;
   display: none;
+  @media(min-width:720px){
+    display:flex;
+  }
 }
 #myChart{
   position: absolute;
