--- a/sass/base/_services.scss
+++ b/sass/base/_services.scss
@@ -1,6 +1,8 @@
 .services-container{
   padding: 10px;
-
+  @media(min-width: 720px){
+    padding: 50px;
+  }
 
     h4{
       border-left: 1px solid $shark;
@@ -15,6 +17,9 @@
 .myServices{
   max-width: 100%;
   margin-bottom: 50px;
+  @media(min-width: 720px){
+    max-width: 48%;
+  }
 }
 .services-flex{
     width: 100%;
@@ -23,13 +28,18 @@
     margin: 15px;
     padding: 15px;
     transition: background-color .5s, color .5s;
+    @media(min-width: 720px){
+      width: 30%;
+    }
 }
 .services-flex:hover{
   background-color: $shark;
   color: white;
   cursor: pointer;
 }
-// .right{
-//   margin-top: 45px;
-//   margin-left: 25px;
-// }
+@media(min-width:720px){
+  .right{
+    margin-top: 45px;
+    margin-left: 25px;
+  }
+}
