--- a/sass/base/_about.scss
+++ b/sass/base/_about.scss
@@ -9,6 +9,10 @@
   padding-top: 50px;
   width: 100%;
   display: flex;
+  flex-direction: column;
+  @media(min-width: 720px){
+    flex-direction: row;
+}
 }
 
 .skills-development,
