--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -36,6 +36,9 @@ a:hover{
     width: 100%;
     opacity: .5;
   }
+  @media(min-width: 720px){
+    display:block;
+}
 }
 .break-quote{
   position: absolute;
@@ -46,8 +49,12 @@ a:hover{
   font-size: 2em;
   color: $shark;
   p, span{
+    display: none;
     text-shadow: 0px .5px  whitesmoke;
     text-indent: 1em;
+    @media(min-width:720px){
+      display:inline-block;
+    }
   }
 }
 .indent{
