--- a/sass/base/_pricing.scss
+++ b/sass/base/_pricing.scss
@@ -26,7 +26,7 @@
   }
 }
 .pricing-button{
-  border: none;
+  // border: none;
   padding:10px 25px;
   border-radius: 2px;
   background-color: $off-pink;
