Changed hover affect for portfolio

--- a/sass/base/_portfolio.scss
+++ b/sass/base/_portfolio.scss
@@ -32,26 +32,26 @@
 }
 .project-information{
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  // flex-direction: column;
   position: absolute;
   top: 30px;
   left: 5px;
-  width: 325px;
-  height: 300px;
-  background-color: rgba(36, 41, 48, .6);
+  width: 100%;
+  height: 100px;
+  background-color: $shark;
   padding: 15px;
   color: whitesmoke;
-  opacity: 0;
+  opacity: 1;
   transition: .7s ease-out;
   font-size: 2em;
     @media(min-width: 720px){
       font-size: 1em;
-      top: 20px;
-      left: 15px;
-      height: 388px;
-      width: 350px;
-      padding: 50px;
+      top: 450px;
+      left: 0px;
+      height: 30%;
+      justify-content: space-between;
+      width: 100%;
+      padding: 15px;
   }
 }
 .small-hidden{
@@ -64,7 +64,7 @@
 .project-information:hover{
   opacity: 1;
   @media(min-width: 720px){
-    transform: scale(1.2);
+    transform:translatey(100px);
   }
 }
 .link{
@@ -85,7 +85,9 @@
 .link:hover{
   cursor:pointer;
 }
-
+.project-image{
+  transition: .5s ease-in-out;
+}
 /*******************************************************************************
 
 Project page styles
