--- a/css/styles.css
+++ b/css/styles.css
@@ -300,27 +300,26 @@ h6 {
 
 .project-information {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   position: absolute;
   top: 30px;
   left: 5px;
-  width: 325px;
-  height: 300px;
-  background-color: rgba(36, 41, 48, 0.6);
+  width: 100%;
+  height: 100px;
+  background-color: #242930;
   padding: 15px;
   color: whitesmoke;
-  opacity: 0;
+  opacity: 1;
   transition: .7s ease-out;
   font-size: 2em; }
   @media (min-width: 720px) {
     .project-information {
       font-size: 1em;
-      top: 20px;
-      left: 15px;
-      height: 388px;
-      width: 350px;
-      padding: 50px; } }
+      top: 450px;
+      left: 0px;
+      height: 30%;
+      justify-content: space-between;
+      width: 100%;
+      padding: 15px; } }
 
 .small-hidden {
   display: none; }
@@ -333,7 +332,7 @@ h6 {
   opacity: 1; }
   @media (min-width: 720px) {
     .project-information:hover {
-      transform: scale(1.2); } }
+      transform: translatey(100px); } }
 
 .link {
   display: flex;
@@ -350,6 +349,9 @@ h6 {
 
 .link:hover {
   cursor: pointer; }
+
+.project-image {
+  transition: .5s ease-in-out; }
 
 /*******************************************************************************
 
