Changing out dummy text

--- a/sass/base/_portfolio.scss
+++ b/sass/base/_portfolio.scss
@@ -128,7 +128,8 @@ Project page styles
 .projectPage-big-image{
   max-width: 99%;
   box-shadow: 1px 0px 11px $shark;
-  margin: 3px;
+  // margin: 3px;
+  text-align: center;
 }
 .projectPage-small-image{
   max-width: 30%;
