--- a/sass/base/_services.scss
+++ b/sass/base/_services.scss
@@ -30,6 +30,10 @@
     transition: background-color .5s, color .5s;
     @media(min-width: 720px){
       width: 30%;
+      margin:13px;
+    }
+    @media(min-width: 1440px){
+      margin:15px;
     }
 }
 .services-flex:hover{
