--- a/sass/base/_nav.scss
+++ b/sass/base/_nav.scss
@@ -68,6 +68,7 @@
 
 .intro-title{
   font-size:2.2em;
+  text-shadow: 0px 0px 1px black;
 }
 
 .intro-span{
@@ -79,6 +80,7 @@
 .intro-p{
   font-size: 1.2em;
   max-width: 100%;
+  text-shadow: 0px 0px 1px black;
 }
 
 .intro-button{
