--- a/sass/base/_portfolio.scss
+++ b/sass/base/_portfolio.scss
@@ -109,7 +109,7 @@ Project page styles
 *******************************************************************************/
 
 .projectPage-main-container{
-  margin:0;
+  margin:50px;
   padding:0;
 
   h1{
