--- a/sass/base/_portfolio.scss
+++ b/sass/base/_portfolio.scss
@@ -66,6 +66,9 @@
   @media(min-width: 1440px){
     top:450px;
   }
+  @media(min-width:1920px){
+    top:575px;
+  }
 }
 .small-hidden{
   display: none;
