--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -68,6 +68,9 @@ a:hover{
   @media(min-width: 1440px){
     top:3375px;
   }
+  @media(min-width: 1920px){
+    top:3625px;
+  }
 }
 .indent{
   text-indent: 2em;
