--- a/sass/base/_nav.scss
+++ b/sass/base/_nav.scss
@@ -16,7 +16,6 @@
   }
 }
 .main-nav{
-  text-shadow: .5px .5px 0px $shark;
   display:flex;
   justify-content: space-between;
   width: 100%;
@@ -28,6 +27,9 @@
     @media(min-width:720px){
       font-size:25px;
     }
+  }
+  @media(min-width:720px){
+    text-shadow: .5px .5px 0px $shark;
   }
 }
 
@@ -69,7 +71,9 @@
 
 .intro-title{
   font-size:2.2em;
-  text-shadow: 0px 0px 1px black;
+  @media(min-width: 720px){
+    text-shadow: 0px 0px 1px black;
+  }
 }
 
 .intro-span{
@@ -81,7 +85,9 @@
 .intro-p{
   font-size: 1.2em;
   max-width: 100%;
-  text-shadow: 0px 0px 1px black;
+  @media(min-width: 720px){
+    text-shadow: 0px 0px 1px black;
+  }
 }
 
 .intro-button{
