--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,24 @@ h6 {
   text-align: center;
   padding: 10px;
   height: 1000px;
-  color: whitesmoke; }
+  color: whitesmoke;
+
+
+  height: 850px;
+
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+
+
+}
+
+
+
+
+
   .introPiece img {
     max-width: 100px; }
   @media (min-width: 720px) {
@@ -260,6 +277,7 @@ h6 {
       text-shadow: 0px 0px 1px black; } }
 
 .intro-span {
+  text-shadow:3px 3px 1px whitesmoke;
   color: #ff4162;
   font-size: 5em;
   font-family: 'Pacifico', cursive; }
@@ -580,6 +598,7 @@ a:hover {
   flex-wrap: wrap; }
 
 .breakImage {
+
   display: none; }
   .breakImage img {
     width: 100%;
